# control

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  annotated.html  biquad_8h_source.html  classcontrol_1_1classic_1_1AbstractController-members.html  classcontrol_1_1classic_1_1AbstractController.html  classcontrol_1_1classic_1_1P-members.html  classcontrol_1_1classic_1_1P.html  classcontrol_1_1classic_1_1PD-members.html  classcontrol_1_1classic_1_1PD.html  classcontrol_1_1classic_1_1PI-members.html  classcontrol_1_1classic_1_1PI.html  classcontrol_1_1classic_1_1PID-members.html  classcontrol_1_1classic_1_1PID.html  classcontrol_1_1filter_1_1Biquad-members.html  classcontrol_1_1filter_1_1Biquad.html  classcontrol_1_1filter_1_1BiquadCascade-members.html  classcontrol_1_1filter_1_1BiquadCascade.html  classcontrol_1_1ident_1_1PRBS-members.html  classcontrol_1_1ident_1_1PRBS.html  classcontrol_1_1system_1_1SISO-members.html  classcontrol_1_1system_1_1SISO.html  classcontrol_1_1system_1_1ss-members.html  classcontrol_1_1system_1_1ss.html  classes.html  dir_173f1b0fa694af510feaad3be1ec5889.html  dir_93bdd9f5d89b676f33d91fbc3def5e40.html  dir_a4935814f13a540f683bf390f3273be3.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e155b1f18e4ac7d4a99a73661132c96c.html  dir_fa39071a34fe6e5d1039263a732bd584.html  files.html  functions.html  functions_func.html  functions_vars.html  ghk_8h_source.html  (+24 more)
.github/workflows/: build.yml
ci/: travis-install-doxygen.sh  travis-install-eigen3.sh
include/control/: classic.h
include/control/classic/: pid.h  pid_discrete_integration.h
include/control/filter/: biquad.h  ghk.h
include/control/ident/: idsignal.h
include/control/system/: ss.h  statespace.h  type.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  namespaces_0.js  pages_0.js  search.js  searchdata.js  variables_0.js
tests/: biquad-cascade-test.cpp  biquad-test.cpp  classic-pid-test.cpp  classic-test.cpp  ghk-test-gen.m  ghk-test.cpp  pid-test.cpp  prbs-test.cpp  ss-test.cpp  statespace-test.cpp
